--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,12 @@
 
 {% block slides %}
 {% include "source/title.html" %}
+{% include "source/takeaways.html" %}
+{% include "source/intro.html" %}
+
+<!--
 {% include "source/test_markdown.html" %}
 {% include "source/test_code.html" %}
 {% include "source/test_backgrounds.html" %}
+-->
 {% endblock %}
