--- a/source/title.html
+++ b/source/title.html
@@ -1,4 +1,8 @@
-<section>
-    <h1>Your Title</h1>
-    <h3>Your sub-title</h3>
+<section data-markdown>
+<script type="text/template">
+    # Modeling Events In Social Data
+    Josh Montague
+
+    (Data Scientist @ Gnip)
+</script>
 </section>
