--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
 {% include "source/title.html" %}
 {% include "source/takeaways.html" %}
 {% include "source/intro.html" %}
+{% include "source/why.html" %}
 
 <!--
 {% include "source/test_markdown.html" %}
