--- a/source/takeaways.html
+++ b/source/takeaways.html
@@ -1,13 +1,13 @@
-<section data-markdown>
-<script type="text/template">
-# Take-aways 
+<section>
+    <h1>Take-aways</h1> 
+    
+    <br>
+    classes of activities 
 
-- classes of activities in social data 
+    <br> <br>
+    <em>Social Media Pulse</em>, network spread 
 
-- _Social Media Pulse_, network spread 
+    <br> <br>
+    can extract useful features from the models
 
-- can extract useful features from the models
-
-        
-</script>
 </section>
