--- a/source/title.html
+++ b/source/title.html
@@ -1,6 +1,7 @@
 <section data-markdown>
 <script type="text/template">
-    # Modeling Events In Social Data
+    # The Social Pulse
+    ## Modeling Events In Social Data
     Josh Montague
 
     (Data Scientist @ Gnip)
