new slides, plus image directory

--- a/source/index.html
+++ b/source/index.html
@@ -3,12 +3,8 @@
 {% block slides %}
 {% include "source/title.html" %}
 {% include "source/takeaways.html" %}
-{% include "source/intro.html" %}
-{% include "source/why.html" %}
+{% include "source/social.html" %}
+{% include "source/focus.html" %}
+{% include "source/unexpected.html" %}
 
-<!--
-{% include "source/test_markdown.html" %}
-{% include "source/test_code.html" %}
-{% include "source/test_backgrounds.html" %}
--->
 {% endblock %}
