--- a/source/takeaways.html
+++ b/source/takeaways.html
@@ -2,12 +2,9 @@
     <h1>Take-aways</h1> 
     
     <br>
-    classes of activities 
+    classify + quantify (a slice of the firehose) 
 
     <br> <br>
-    <em>Social Media Pulse</em>, network spread 
-
-    <br> <br>
-    can extract useful features from the models
+    <em>Social Media Pulse</em>
 
 </section>
