--- a/source/title.html
+++ b/source/title.html
@@ -2,8 +2,16 @@
 <script type="text/template">
     # The Social Pulse
     ## Modeling Events In Social Data
-    Josh Montague
+    Josh Montague 
+    
+    [@jrmontag](http://www.twitter.com/jrmontag)
 
-    (Data Scientist @ Gnip)
+    <br>
+    (img of pulse)
+
+
+    <br>
+    [bit.ly/AB-Pulse](http://bit.ly/AB-Pulse)
+    
 </script>
 </section>
