--- a/presentation/index.html
+++ b/presentation/index.html
@@ -119,7 +119,7 @@
 
 # Expected 
 
-awards shows, storms, product announcements    
+award show, storm, product announcement 
 
 <br> <br> 
 # Unexpected 
