--- a/source/focus.html
+++ b/source/focus.html
@@ -10,6 +10,6 @@
     </p>
 
     <br> 
-    <p class="fragment roll-in"> identify and isolate an event </p>
+    <p class="fragment roll-in"> identify and <em>isolate</em> an event </p>
 
 </section>
