--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
 {% include "source/takeaways.html" %}
 {% include "source/social.html" %}
 {% include "source/focus.html" %}
-{% include "source/unexpected.html" %}
+{% include "source/exp_unexp_1.html" %}
+{% include "source/exp_unexp_2.html" %}
+{% include "source/pulse.html" %}
 
 {% endblock %}
