--- a/source/base.html
+++ b/source/base.html
@@ -29,6 +29,11 @@
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
+        <script type="text/x-mathjax-config">
+                  MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'],['\\(','\\)']] }  });
+        </script>
+        <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'> </script>
+
 	</head>
 
 	<body>
