add slides, finish outline

--- a/source/exp_unexp.html
+++ b/source/exp_unexp.html
@@ -33,7 +33,7 @@ award show, storm, product announcement
 
 # Unexpected 
 
-earthquake, celebrity death 
+earthquake, celebrity death, mergers & acquisitions 
 
 </script>
 </section>
