--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,10 @@
 {% include "source/takeaways.html" %}
 {% include "source/social.html" %}
 {% include "source/focus.html" %}
-{% include "source/exp_unexp_1.html" %}
-{% include "source/exp_unexp_2.html" %}
+{% include "source/exp_unexp.html" %}
+{% include "source/exp_unexp_fit.html" %}
 {% include "source/pulse.html" %}
+{% include "source/params.html" %}
+{% include "source/next.html" %}
 
 {% endblock %}
