--- a/source/pulse.html
+++ b/source/pulse.html
@@ -1,15 +1,27 @@
 <section> 
+    <section> 
+    <h1> Social Media Pulse </h1> 
 
-<h1> Social Media Pulse </h1> 
+    <br>
+    <h3>(I promise this is the only slide with equations)</h3>
+    <br> 
 
-<br> <br> 
+    <p>unexpected event at time \(t=0 \rightarrow p_1(t) = \lambda e^{-\lambda t} \)</p>
 
-<h6> img + fit </h6>
+    <br />
 
-counting # of events, exponential probability decay in time: _Poisson process_ 
+    <p class="fragment fade-in">\(N\) people \(\rightarrow \sum_{i=1}^{N} \text{Exp} \sim 
+        \frac{\beta^{\alpha}}{\Gamma(\alpha)} t^{\alpha - 1} e^{-\beta t}\)</p>
+    </section>
 
-$$ f(t) = \lambda \exp{-\lambda t} $$
+    <section>
 
-<br> <br> <br> <br> <br> <br> 
+    same img + fit + params
+    <br> <br> <br> <br> <br> <br> <br> <br> 
+
+    <h1>Unexpected</h1>
+
+
+    </section>
 
 </section>
