--- a/source/title.html
+++ b/source/title.html
@@ -1,8 +1,10 @@
 <section data-markdown>
 <script type="text/template">
-    # The Social Pulse
-    ## Modeling Events In Social Data
-    Josh Montague 
+    # Social Media Pulse
+    ### Modeling Events In Social Data
+
+    <br>
+    Josh Montague (Gnip) 
     
     [@jrmontag](http://www.twitter.com/jrmontag)
 
@@ -10,7 +12,7 @@
     (img of pulse)
 
 
-    <br>
+    <br> <br>
     [bit.ly/AB-Pulse](http://bit.ly/AB-Pulse)
     
 </script>
