--- a/source/social.html
+++ b/source/social.html
@@ -7,10 +7,11 @@
         <h4>Twitter, Tumblr, Foursquare, Facebook, Disqus, WordPress, IntenseDebate, GetGlue, StockTwits, Estimize, Newsgator, Bitly, del.icio.us, flickr, Google+, Instagram, Metacafe, Panoramio, Photobucket, Plurk, Reddit, StackOverflow, Vimeo, VK, YouTube, .... </h4> 
         <br> 
         <p class="fragment roll-in">
-        amazing medium for sharing, communicating, networking
+        sharing, communicating, networking
         </p>
+        <br>
         <p class="fragment roll-in">
-        + cheaper than a census, real-time, <em>many</em> participants 
+        + cheaper than a census, real-time, <em>many</em> participants... 
         </p>
     </section>
 
