--- a/source/exp_unexp.html
+++ b/source/exp_unexp.html
@@ -1,41 +1,31 @@
 <section>
 
-<section data-markdown>
-<script type="text/template">
+<section >
 
-# Expected 
+<h1>Expected</h1> 
 
-<br> <br> <br> <br> <br> 
+<br> <br> <br> <br> <br> <br> 
 
-# Unexpected 
+<h1>Unexpected</h1> 
     
-</script>
 </section>
 
-<section data-markdown>
-<script type="text/template">
-
-# Expected 
-
+<section>
+<h1> Expected </h1>
 award show, storm, product announcement 
 
-<br> <br> <br> <br> <br> <br> <br> <br> 
-###### img
-
-</script>
+<br> <br> 
+<a class="image" href="http://www.weather.gov/ilm/HurricaneIreneAug272011" target="_blank"><img width="500" height="400" src="images/irene-track.gif" alt="Hurricane Irene forecast"></a>
 </section>
 
-<section data-markdown>
-<script type="text/template">
+<section >
 
-###### img
-<br> <br> <br> <br> <br> <br> <br> <br> 
+<a class="image" href="http://www.dailymail.co.uk/news/article-2029335/Virginia-earthquake-2011-1-NINETY-tremors-US-day.html" target="_blank"><img width="600" height="350" src="images/va-quake.jpg" alt="Virginia quake"></a>
+<br> <br> 
 
-# Unexpected 
-
+<h1> Unexpected </h1> 
 earthquake, celebrity death, mergers & acquisitions 
 
-</script>
 </section>
 
 </section>
