--- a/source/exp_unexp_fit.html
+++ b/source/exp_unexp_fit.html
@@ -1,27 +1,22 @@
 <section>
 
-<section data-markdown>
-<script type="text/template">
+<section >
 
-# Expected 
-
-
-<br> <br> <br> <br> <br> <br> <br> <br> 
-###### img + fit
-
-</script>
+<h1>Expected</h1> 
+<br>
+Hurricane Irene
+<br> 
+<a class="image" target="_blank"><img width="700" height="400" src="images/SMP_hurricane_trend.png" alt="Hurricane Irene + smooth"></a>
+<br> 
 </section>
 
-<section data-markdown>
-<script type="text/template">
+<section>
+<a class="image" href="http://en.wikipedia.org/wiki/2011_Virginia_earthquake" target="_blank"><img width="700" height="400" src="images/SMP_va_quake_fit1.png" alt="Virginia quake"></a>
 
-###### img + fit
-<br> <br> <br> <br> <br> <br> <br> <br> 
-
-# Unexpected 
-
-
-</script>
+<br>
+Virginia earthquake
+<br> <br> 
+<h1>Unexpected</h1>
 </section>
 
 </section>
