--- a/source/params.html
+++ b/source/params.html
@@ -1,21 +1,24 @@
 <section> 
     <section>
-    <br />
-    <h2>Activity volume</h2> 
-    some other words and another example
+    <h1>divergence</h1>
+    <br> <br> <br> <br> <br>
+    <h2>parameters \(\rightarrow\) reality</h2>
+    </section>
 
-    <br> <br> <br> <br> <br> <br> <br> <br>
-    <h2>Half-life</h2> 
-    some other words and another example
+    <section>
+    <a class="image" href="http://en.wikipedia.org/wiki/2011_Virginia_earthquake" target="_blank"><img width="700" height="400" src="images/SMP_va_quake_fit1_div.png" alt="Virginia quake"></a>
+    <br> <br> 
+    news stories begin to circulate 
+    <br>
     </section>
 
     <section> 
-    <br />
-    <h2>Time to peak</h2> 
-    some words and another example
-    
-    <br> <br> <br> <br> <br> <br> <br> <br>
-    <h2>Response time</h2> 
-    some words and an example
+    <a class="image" href="http://en.wikipedia.org/wiki/2011_Virginia_earthquake" target="_blank"><img width="650" height="350" src="images/SMP_va_quake_fit1.png" alt="Virginia quake"></a>
+    <br> <br>
+    <h3>Time to peak</h3> 
+    <h3>Half-life</h3> 
+    <h3>Response time</h3> 
+    <h3>Activity volume</h3> 
     </section>
+
 </section>
