--- a/source/pulse.html
+++ b/source/pulse.html
@@ -5,23 +5,15 @@
     <br>
     <h3>(I promise this is the only slide with equations)</h3>
     <br> 
-
-    <p>unexpected event at time \(t=0 \rightarrow p_1(t) = \lambda e^{-\lambda t} \)</p>
-
-    <br />
-
+    <p>unexpected event at time \(t=0\)</p>
+    <br>
+    <p>probability of someone sharing, \( p_1(t) = \lambda e^{-\lambda t} \)</p>
+    <br>
     <p class="fragment fade-in">\(N\) people \(\rightarrow \sum_{i=1}^{N} \text{Exp} \sim 
         \frac{\beta^{\alpha}}{\Gamma(\alpha)} t^{\alpha - 1} e^{-\beta t}\)</p>
+    <br>
+    <p class="fragment fade-in"> \( \rightarrow \alpha, \beta \)
+    <br>
+    so what?</p>
     </section>
-
-    <section>
-
-    same img + fit + params
-    <br> <br> <br> <br> <br> <br> <br> <br> 
-
-    <h1>Unexpected</h1>
-
-
-    </section>
-
 </section>
