--- a/source/takeaways.html
+++ b/source/takeaways.html
@@ -1,10 +1,12 @@
 <section>
     <h1>Take-aways</h1> 
-    
-    <br>
+    <br> 
     classify + quantify (a slice of the firehose) 
 
-    <br> <br>
+    <br> <br> 
     <em>Social Media Pulse</em>
-
+    <br> <br>
+    <a class="image" href="http://en.wikipedia.org/wiki/2011_Virginia_earthquake" target="_blank"><img width="500" height="300" src="images/SMP_va_quake.png" alt="Virginia quake"></a>
+    <br>
 </section>
+
