--- a/source/social.html
+++ b/source/social.html
@@ -8,10 +8,8 @@
     <br> 
     <p class="fragment roll-in">
     sharing, communicating, networking
-    </p>
-    <br>
-    <p class="fragment roll-in">
-    + cheaper than a census, real-time, <em>many</em> participants... 
+    <br> <br>
+    cheaper than a census, real-time, <em>many</em> participants... 
     </p>
     </section>
 
