clean out unneeded images

--- a/source/exp_unexp_fit.html
+++ b/source/exp_unexp_fit.html
@@ -4,9 +4,9 @@
 
 <h1>Expected</h1> 
 <br>
-Hurricane Irene
-<br> 
-<a class="image" target="_blank"><img width="700" height="400" src="images/SMP_hurricane_trend.png" alt="Hurricane Irene + smooth"></a>
+Winter Storm Janus
+<br>
+<a class="image" target="_blank"><img width="800" height="400" src="images/janus-smooth.png" alt="Winter Storm Janus + smooth"></a>
 <br> 
 </section>
 
