--- a/source/social.html
+++ b/source/social.html
@@ -16,9 +16,7 @@
     <section>
     <h2> Last week on Twitter & Tumblr</h2>
     <br>
-    <a class="image" target="_blank"><img width="900" height="350" src="images/wk-grapherator.png" alt="1 week of Twitter / Tumblr"></a>
-
-    (one connection)
+    <a class="image" target="_blank"><img width="800" height="400" src="images/tw-tu_grapherator.png" alt="Twitter / Tumblr firehose data"></a>
 
     </section>
 </section>
