--- a/source/next.html
+++ b/source/next.html
@@ -1,22 +1,21 @@
 <section data-markdown>
 <script type="text/template">
-# What next? 
-
-
-<br>
-
-<p align="center"> build a gallery</p>
-
-<br>
-<p align="center"> try other models (network)</p> 
+# now what? 
 
 <br>
 
-<p align="center"> compare parameters across social channels</p> 
+build a gallery
+
+<br>
+try other models (network)
 
 <br>
 
-<p align="center"> ?</p> 
+compare parameters across social channels
+
+<br>
+
+? 
 
 <br>
 [@jrmontag](https://twitter.com/jrmontag)
