fix a couple lines

--- a/source/takeaways.html
+++ b/source/takeaways.html
@@ -1,7 +1,7 @@
 <section>
     <h1>Take-aways</h1> 
     <br> 
-    classify + quantify (a slice of the firehose) 
+    classify + quantify a slice of the firehose 
 
     <br> <br> 
     <em>Social Media Pulse</em>
