--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <section>
     <h1>Take-aways</h1> 
     <br> 
-    classify + quantify (a slice of the firehose) 
+    classify + quantify a slice of the firehose 
 
     <br> <br> 
     <em>Social Media Pulse</em>
